# idao_22

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .root  Makefile  README.md  answer.csv  config.yaml  generate_submission.py  models.py  pyproject.toml  requirements.txt  run.sh  utils.py  zip.sh
.github/workflows/: ci.yaml
adhoc/: All_inferences.ipynb  CatBoost_train_inference.ipynb  MEGNet_train_inference.ipynb  atoms_to_defects.ipynb  atoms_to_defects.py  datasets_converter.ipynb  defects_eda.ipynb  eda.ipynb  eda_predictions.ipynb  invert_defects.ipynb  jsons2csv.ipynb  megnet.csv  megnet_on_defects.ipynb  mt_cgcnn_pymatgen_to_format.ipynb  test.csv  test.py  utils.py
adhoc/.ipynb_checkpoints/: eda-checkpoint.ipynb
adhoc/callback/: 09598tr_089lb.hdf5  09598tr_089lb.hdf5.json
adhoc/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
adhoc/edas/: defects_eda.ipynb  eda.ipynb  eda_megnet_alignn.ipynb  eda_predictions.ipynb
configs/: alignn_cgcnn_config.json  alignn_config.json  defects_extractor_config.yaml  icgcnn_config.json  jv_mbj_bandgap_alignn_config.json  jv_optb88vdw_bandgap_alignn_config.json  mp_gappbe_alignnn_config.json  qm9_gap_alignn_config.json
data/: get_data.sh
notebooks/: atoms_to_defects.ipynb  atoms_to_defects.py  catboost_features.json  features_selection_boosting.ipynb  images.ipynb
predictions/: eval_predictions.csv  final_answer.csv  train_predictions.csv
scripts/: pretrained_new.py  utils.py
weights/: boosting.cbm  val_mae_00277_0.016851.hdf5  val_mae_00375_0.010953.hdf5  val_mae_00750_0.010320.hdf5
(+40 files in other folders)
