[tool.poetry]
name = "optiver-challenge"
version = "0.1.0"
description = "Optiver Realized Volatility Prediction challenge"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
pandas = "^1.3.1"
pyarrow = "^5.0.0"
numpy = "^1.21.1"
scipy = "^1.7.1"
scikit-learn = "^0.24.2"
jupyter = "^1.0.0"
ipykernel = "^6.1.0"
plotly = "^5.2.1"
matplotlib = "^3.4.3"
tqdm = "^4.62.0"
kaggle = "^1.5.12"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15.3"
black = "^21.7b0"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
