[tool.poetry]
name = "idao-challenge"
version = "0.1.0"
description = "International Data Analysis Olympiad"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
pandas = "^1.3.1"
numpy = "^1.21.1"
scipy = "^1.7.1"
jupyter = "^1.0.0"
ipykernel = "^6.1.0"
plotly = "^5.2.1"
matplotlib = "^3.4.3"
tqdm = "^4.62.0"
scikit-learn = "^1.0.2"
pymatgen = "^2022.2.1"
ase = "^3.22.1"
nglview = "^3.0.3"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15.3"
black = "^21.7b0"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
